--- a/fchat-rising/index.html
+++ b/fchat-rising/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Moved!</title>
+        <title>Moved!!</title>
      <meta charset="UTF-8" />
      <meta http-equiv="refresh" content="3; URL=https://hearmeneigh.github.io/fchat-rising/" />
    </head>
